--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "editor.autoClosingComments": "always",
     "editor.autoClosingBrackets": "always",
-    "editor.autoClosingQuotes": "always"
+    "editor.autoClosingQuotes": "always",
+    "files.exclude": {
+        "**/.DS_Store": false,
+        "**/.git": false,
+        "**/.hg": false,
+        "**/.svn": false,
+        "**/CVS": false,
+        "**/Thumbs.db": false
+    }
 }
